bindings/go/ffi/slatedb.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
typedef struct UniffiVTableCallbackInterfaceFfiLogCallback {
    UniffiCallbackInterfaceFfiLogCallbackMethod0 log;
    UniffiCallbackInterfaceFree uniffiFree;
} UniffiVTableCallbackInterfaceFfiLogCallback;
typedef struct UniffiVTableCallbackInterfaceFfiMergeOperator {
    UniffiCallbackInterfaceFfiMergeOperatorMethod0 merge;
    UniffiCallbackInterfaceFree uniffiFree;
} UniffiVTableCallbackInterfaceFfiMergeOperator;
void uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_with_options(void* ptr, RustBuffer options, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_with_wal_object_store(void* ptr, void* wal_object_store, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_clone_ffidbsnapshot(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_ffidbsnapshot(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbsnapshot_get(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbsnapshot_get_key_value(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbsnapshot_get_key_value_with_options(void* ptr, RustBuffer key, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbsnapshot_get_with_options(void* ptr, RustBuffer key, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbsnapshot_scan(void* ptr, RustBuffer range
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbsnapshot_scan_prefix(void* ptr, RustBuffer prefix
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbsnapshot_scan_prefix_with_options(void* ptr, RustBuffer prefix, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbsnapshot_scan_with_options(void* ptr, RustBuffer range, RustBuffer options
);
void* uniffi_slatedb_ffi_fn_clone_ffidbtransaction(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_ffidbtransaction(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_commit(void* ptr
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_commit_with_options(void* ptr, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_delete(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_get(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_get_key_value(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_get_key_value_with_options(void* ptr, RustBuffer key, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_get_with_options(void* ptr, RustBuffer key, RustBuffer options
);
RustBuffer uniffi_slatedb_ffi_fn_method_ffidbtransaction_id(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_mark_read(void* ptr, RustBuffer keys
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_merge(void* ptr, RustBuffer key, RustBuffer operand
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_merge_with_options(void* ptr, RustBuffer key, RustBuffer operand, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_put(void* ptr, RustBuffer key, RustBuffer value
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_put_with_options(void* ptr, RustBuffer key, RustBuffer value, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_rollback(void* ptr
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_scan(void* ptr, RustBuffer range
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_scan_prefix(void* ptr, RustBuffer prefix
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_scan_prefix_with_options(void* ptr, RustBuffer prefix, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_scan_with_options(void* ptr, RustBuffer range, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_seqnum(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_unmark_write(void* ptr, RustBuffer keys
);
void* uniffi_slatedb_ffi_fn_clone_ffilogcallback(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_ffilogcallback(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_init_callback_vtable_ffilogcallback(UniffiVTableCallbackInterfaceFfiLogCallback* vtable
);
void uniffi_slatedb_ffi_fn_method_ffilogcallback_log(void* ptr, RustBuffer record, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_clone_ffimergeoperator(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_ffimergeoperator(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_init_callback_vtable_ffimergeoperator(UniffiVTableCallbackInterfaceFfiMergeOperator* vtable
);
RustBuffer uniffi_slatedb_ffi_fn_method_ffimergeoperator_merge(void* ptr, RustBuffer key, RustBuffer existing_value, RustBuffer operand, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_clone_ffiobjectstore(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_ffiobjectstore(void* ptr, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_constructor_ffiobjectstore_from_env(RustBuffer env_file, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_constructor_ffiobjectstore_resolve(RustBuffer url, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_clone_ffisettings(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_ffisettings(void* ptr, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_constructor_ffisettings_default(RustCallStatus *out_status
    
);
void* uniffi_slatedb_ffi_fn_constructor_ffisettings_from_env(RustBuffer prefix, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_constructor_ffisettings_from_env_with_default(RustBuffer prefix, void* default_settings, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_constructor_ffisettings_from_file(RustBuffer path, RustCallStatus *out_status
);