bindings/python/src/slatedb/ffi/slatedb.py

_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_with_options.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_with_wal_object_store.argtypes = (
    ctypes.c_void_p,
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_with_wal_object_store.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffidbsnapshot.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffidbsnapshot.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffidbsnapshot.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffidbsnapshot.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbsnapshot_get.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbsnapshot_get.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbsnapshot_get_key_value.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbsnapshot_get_key_value.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbsnapshot_get_key_value_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbsnapshot_get_key_value_with_options.restype = (
    ctypes.c_uint64
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbsnapshot_get_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbsnapshot_get_with_options.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbsnapshot_scan.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbsnapshot_scan.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbsnapshot_scan_prefix.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbsnapshot_scan_prefix.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbsnapshot_scan_prefix_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbsnapshot_scan_prefix_with_options.restype = (
    ctypes.c_uint64
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbsnapshot_scan_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbsnapshot_scan_with_options.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffidbtransaction.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffidbtransaction.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffidbtransaction.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffidbtransaction.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_commit.argtypes = (ctypes.c_void_p,)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_commit.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_commit_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_commit_with_options.restype = (
    ctypes.c_uint64
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_delete.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_delete.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_get.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_get.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_get_key_value.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_get_key_value.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_get_key_value_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_get_key_value_with_options.restype = (
    ctypes.c_uint64
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_get_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_get_with_options.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_id.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_id.restype = _UniffiRustBuffer
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_mark_read.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_mark_read.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_merge.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_merge.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_merge_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_merge_with_options.restype = (
    ctypes.c_uint64
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_put.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_put.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_put_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_put_with_options.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_rollback.argtypes = (ctypes.c_void_p,)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_rollback.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_scan.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_scan.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_scan_prefix.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_scan_prefix.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_scan_prefix_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_scan_prefix_with_options.restype = (
    ctypes.c_uint64
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_scan_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_scan_with_options.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_seqnum.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_seqnum.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_unmark_write.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbtransaction_unmark_write.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffilogcallback.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffilogcallback.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffilogcallback.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffilogcallback.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_init_callback_vtable_ffilogcallback.argtypes = (
    ctypes.POINTER(_UniffiVTableCallbackInterfaceFfiLogCallback),
)
_UniffiLib.uniffi_slatedb_ffi_fn_init_callback_vtable_ffilogcallback.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffilogcallback_log.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffilogcallback_log.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffimergeoperator.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffimergeoperator.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffimergeoperator.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffimergeoperator.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_init_callback_vtable_ffimergeoperator.argtypes = (
    ctypes.POINTER(_UniffiVTableCallbackInterfaceFfiMergeOperator),
)
_UniffiLib.uniffi_slatedb_ffi_fn_init_callback_vtable_ffimergeoperator.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffimergeoperator_merge.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffimergeoperator_merge.restype = _UniffiRustBuffer
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffiobjectstore.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffiobjectstore.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffiobjectstore.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffiobjectstore.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffiobjectstore_from_env.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffiobjectstore_from_env.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffiobjectstore_resolve.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffiobjectstore_resolve.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffisettings.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffisettings.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffisettings.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffisettings.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffisettings_default.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffisettings_default.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffisettings_from_env.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffisettings_from_env.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffisettings_from_env_with_default.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffisettings_from_env_with_default.restype = (
    ctypes.c_void_p
)
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffisettings_from_file.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffisettings_from_file.restype = ctypes.c_void_p
